-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
4.8.x, 5.0.0 Beta 1
-
None
-
9f3f4551511b63a3f230a8d71718d0d5fa352a28
QDBusConnection::disconnectFromBus and QDBusConnection::disconnectFromPeer do a faulty check that does not consider the possibility the connection is in InvalidMode. As result, any invalid connection will not be removed.
| For Gerrit Dashboard: QTBUG-27973 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 60709,1 | Fix disconnectFrom{Peer,Bus} when the connection failed | stable | qt/qtbase | Status: MERGED | +2 | 0 |